cmake_minimum_required(VERSION 3.23)
project(Objektno_Orientirano_Programiranje)

set(CMAKE_CXX_STANDARD 23)

add_executable(Objektno_Orientirano_Programiranje Aud1/Zadaca1AUD1.c)
add_executable(Objektno_Orientirano_Programiranje1 Aud1/Zadaca2AUD1.c)
add_executable(Zadaci_za_Kolokvium1 "Labs/Zadaca_21.cpp")
add_executable(Zadaci_za_kolokvium3 "Zadaci za Kolokvium/Zadaca_8.c")
add_executable(Objektno_Orientirano_Programiranje2 "Class Basics.cpp")
add_executable(Objektno_Orientirano_Programiranje3 Aud3/Zadaca1AUD3.cpp)
add_executable(Objektno_Orientirano_Programiranje4 Aud3/Zadaca2AUD3.cpp)
add_executable(Objektno_Orientirano_Programiranje5 Aud3/Zadaca3AUD3.cpp)
add_executable(Zadaci_za_Kolokvium4 "Labs/Labs2_Zad1.cpp")
add_executable(Zadaci_za_Kolokvium5 "Labs/Labs2_Zad2.cpp")
add_executable(Zadaci_za_Kolokvium6 "Labs/Labs2_Zad3.cpp")
add_executable(Zadaci_za_Kolokvium7 "Labs/Labs3_Zad1.cpp")
add_executable(Zadaci_za_Kolokvium8 "Labs/Labs3_Zad2.cpp")
add_executable(Objektno_Orientirano_Programiranje6 Aud6/Operator=.cpp)
add_executable(Objektno_Orientirano_Programiranje7 Aud6/Zadaca1AUD6.cpp)
add_executable(Zadaci_za_Kolokvium9 "Labs/Labs4_Zad1.cpp")
add_executable(Zadaci_za_Kolokvium11 "Labs/Labs4_Zad2.cpp")
add_executable(Zadaci_za_Kolokvium12 "Zadaci za Kolokvium/Zadaca1Kolokviumski.cpp")
add_executable(Zadaci_za_Kolokvium13 "Zadaci za Kolokvium/Zadaca5Kolokviumski.cpp")
add_executable(Zadaci_za_Kolokvium14 "Zadaci za Kolokvium/Zadaca14Kolokviumski.cpp")
add_executable(Zadaci_za_Kolokvium15 "Zadaci za Kolokvium/Zadaca17Kolokviumski.cpp")
add_executable(Zadaci_za_Kolokvium17 "Zadaci za Kolokvium/WebServerZadacaKolokvium.cpp")
add_executable(Zadaci_za_Kolokvium18 "Zadaci za Kolokvium/CountryZadacaKolokvium.c")
add_executable(Zadaci_za_Kolokvium19 "Zadaci za Kolokvium/Zadaca6Kolokviumski.c")
add_executable(Zadaci_za_Kolokvium20 "Labs/Labs6_Zad1.cpp")
add_executable(Zadaci_za_Kolokvium21 "Labs/Labs6_Zad2.cpp")
add_executable(Objektno_Orientirano_Programiranje8 Aud7/Zadaca1Aud7.cpp)
add_executable(Zadaci_za_Kolokvium22 "Labs/Labs7_Zad1.cpp")
add_executable(Objektno_Orientirano_Programiranje9 Aud9/Zadaca1Aud9.cpp)
add_executable(Objektno_Orientirano_Programiranje10 Aud9/Zadaca2Aud9.cpp)
add_executable(Objektno_Orientirano_Programiranje11 Aud9/Zadaca3Aud9.cpp)
add_executable(Zadaci_za_Kolokvium23 "Labs/Labs8_Zad1.cpp")
add_executable(Zadaci_za_Kolokvium24 "Labs/Labs8_Zad2.cpp")
add_executable(Objektno_Orientirano_Programiranje12 Aud10/Zadaca1Aud10.cpp)
add_executable(Objektno_Orientirano_Programiranje13 Aud10/Zadaca2Aud10.cpp)
add_executable(Zadaci_za_Kolokvium25 "Labs/Labs9_Zad1.cpp")
add_executable(Objektno_Orientirano_Programiranje14 Aud11/IntroToStatic&Exceptions.cpp Aud11/Zadaca1Aud11.cpp)
add_executable(Objektno_Orientirano_Programiranje15 Aud11/Zadaca1Aud11.cpp)
add_executable(Objektno_Orientirano_Programiranje16 Aud11/Zadaca2Aud11.cpp)
add_executable(Zadaci_za_Kolokvium26 "Labs/Labs10Zad1.cpp")
add_executable(Zadaci_za_Kolokvium27 "Labs/Labs10Zadaca2.cpp")
add_executable(Zadaci_za_Kolokvium28 "Zadaci za Kolokvium/VtorKolokviumZadaca1.cpp")
add_executable(Zadaci_za_Kolokvium29 "Zadaci za Kolokvium/VtorKolokviumZadaca2.cpp")
add_executable(Zadaci_za_Kolokvium30 "Zadaci za Kolokvium/VtorKolokviumZadaca4.cpp")
add_executable(Zadaci_za_Kolokvium31 "Zadaci za Kolokvium/VtorKolokviumZadaca16.cpp")
add_executable(Zadaci_za_Kolokvium32 "Zadaci za Kolokvium/VtorKolokviumZadaca14.cpp")
add_executable(Zadaci_za_Kolokvium33 "Zadaci za Kolokvium/VtorKolokviumZadaca8.cpp")
add_executable(Zadaci_za_Kolokvium34 "Zadaci za Kolokvium/VtorKolokviumZadaca11.cpp")
add_executable(Zadaci_za_Kolokvium35 "Zadaci za Kolokvium/VtorKolokviumZadaca5.cpp")
add_executable(Zadaci_za_Kolokvium36 "Zadaci za Kolokvium/VtorKolokviumZadaca10.cpp")
add_executable(Zadaci_za_Kolokvium37 "Zadaci za Kolokvium/VtorKolokviumZadaca12.cpp")
add_executable(Zadaci_za_Kolokvium38 "Zadaci za Kolokvium/VtorKolokviumZadaca17.cpp")